@@ -30,7 +30,7 @@ public class UpdateUtils {
     private static final Logger logger = LogManager.getLogger(UpdateUtils.class);
     // do not update the default version without adjusting the unit test. the real version comes from METAINF.MF
     private static final String DEFAULT_VERSION = "1.7.94-10-b6345398";
-    private static final String REPO_NAME = "ripmeapp2/ripme";
+    private static final String REPO_NAME = "ripmeapp/ripme";
     private static final String updateJsonURL = "https://raw.githubusercontent.com/" + REPO_NAME + "/main/ripme.json";
     private static final Path newFile = Paths.get("ripme.jar.new");
     private static Path mainFile;
@@ -52,7 +52,7 @@ public class UpdateUtils {
         return "https://github.com/"
                 + REPO_NAME
                 + "/releases/download/"
-                + latestVersion.substring(0, latestVersion.indexOf("-"))
+                + latestVersion
                 + "/ripme-"
                 + latestVersion + ".jar";
     }
@@ -296,10 +296,9 @@ public class UpdateUtils {
             Runtime.getRuntime().addShutdownHook(new Thread(() -> {
                 try {
                     logger.info("Executing: " + batchFile);
-                    Runtime.getRuntime().exec(String.valueOf(batchFile));
+                    ProcessBuilder processBuilder = new ProcessBuilder(String.valueOf(batchFile));
+                    processBuilder.start();
                 } catch (IOException e) {
-                    // TODO implement proper stack trace handling this is really just intented as a
-                    // placeholder until you implement proper error handling
                     e.printStackTrace();
                 }
             }));
